compilateurDeca/src/test/deca/codegen/invalid/sans_objet/plein_cond_false.deca
// Description:
//    Erreur a l'execution : debordement de pile 
//
// Resultats:
//    Erreur : pile pleine
//
// Historique:
//    cree le 10/01/2026
class A {
    void f(int n) {
        if (n < 0) {
        }
        this.f(n + 1);
    }
}
{
    A a = new A();
    a.f(0);
}
